tests/invalid/purity/purity_type_error.err_exp
purity_type_error.m:018: In clause for predicate `purity_type_error.type_error/1':
purity_type_error.m:018:   in argument 1 of clause head:
purity_type_error.m:018:   type error in unification of variable `HeadVar__1'
purity_type_error.m:018:   and constant `1.00000000000000'.
purity_type_error.m:018:   variable `HeadVar__1' has type `int',
purity_type_error.m:018:   constant `1.00000000000000' has type `float'.
purity_type_error.m:007: In predicate `purity_type_error.warn/1':
purity_type_error.m:007:   warning: declared `impure' but actually pure.
For more information, try recompiling with `-E'.
